 Version 0.45
 ============

 Released on 

 New features and improvements:

   - ofaHub: new hub management class (todo #948).
   - ofaICollectionable, ofaICollector: new interfaces.
   - ofaIExeCloseClose: new interface for exercice closing in the plugins.
   - ofaIHubber: new interface for ofaHub management (todo #941).
   - TVA: compute the VAT rules (todo #311).

 Bug fixes:

   - 

 Other changes:

   - core/ofo-marshal.def: remove obsoleted file (todo #962).
   - ofa_idbmodel_get_by_name(): new method.
   - ofaAccountSelectorBin: removed unused class.
   - ofaCollection: removed class.
   - ofaConcilCollection: removed class.
   - ofaIDataset: removed obsolete interface (todo #957).
   - ofa_dossier_misc_import_csv(): removed function.
   - ofa_ledger_treeview_get_top_focusable_widget(): removed method.
   - ofa_main_window_get_dossier: obsoleted method (todo #961).
   - ofa_main_window_open_dossier: obsoleted method (todo #961).
   - ofa_main_window_get_hub(): new method.
   - ofa_page_get_dossier(): obsoleted method (todo #955).
   - ofo_base_get_hub(), ofo_base_set_hub(): new methods.
   - ofo_dossier_new(): removed method.
   - ofo_dossier_get_min_deffect(): changed API (todo #960).
   - ofo_ledger_get_last_entry(): changed API (todo #959).
   - ofaICollectionable: new interface for classes which have in-memory datasets.
   - ofa_tva_declare_page_set_selected(): new method.

-----------------------------------------------------------------------
 Version 0.44
 ============

 Released on 2015-01-04.

 New features and improvements:

   - TVA: new module for TVA operations management (todo #311).
   - ofaIDBModel: new DDL management interface (todo #951).

 Bug fixes:

   - DossierManager: close the currently opened dossier before deleting it (todo #943).
   - ofoRate: fix validity comparison (todo #946).

 Other changes:

   - myIGridList: new interface.
   - ofaApplication: new 'menu-defined' signal.
   - ofaIDBCustomer: new interface.
